--- a/felipe.html
+++ b/felipe.html
@@ -175,11 +175,11 @@ footer {
             </div>
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="newporti.html">MENU PRINCIPAL</a></li>
-                    <li><a href="audi.html">Erick Tenor</a></li>
+                    <li><a href="index.html">MENU PRINCIPAL</a></li>
+                    <li><a href="erick.html">Erick Tenor</a></li>
                     <li><a href="davi.html">Davi Foina</a></li>
-                    <li><a href="fredynho.html">Pedro stipp</a></li>
-                    <li><a href="audi.html">Yan Victor</a></li>
+                    <li><a href="pedro.html">Pedro stipp</a></li>
+                    <li><a href="yan.html">Yan Victor</a></li>
                 </ul>
             </nav>
         </div>
