--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ footer {
             </div>
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="lippe.html">Felipe Dias</a></li>
-                    <li><a href="obito.html">Erick Tenor</a></li>
+                    <li><a href="felipe.html">Felipe Dias</a></li>
+                    <li><a href="erick.html">Erick Tenor</a></li>
                     <li><a href="davi.html">Davi Foina</a></li>
-                    <li><a href="fredynho.html">Pedro Henrique</a></li>
-                    <li><a href="audi.html">Yan Victor</a></li>
+                    <li><a href="pedro.html">Pedro Henrique</a></li>
+                    <li><a href="yan.html">Yan Victor</a></li>
                 </ul>
             </nav>
         </div>
