--- a/pedro.html
+++ b/pedro.html
@@ -174,11 +174,11 @@ footer {
             </div>
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="newporti.html">MENU PRINCIPAL</a></li>
-                    <li><a href="obito.html">Erick Tenor</a></li>
+                    <li><a href="index.html">MENU PRINCIPAL</a></li>
+                    <li><a href="erick.html">Erick Tenor</a></li>
                     <li><a href="davi.html">Davi Foina</a></li>
-                    <li><a href="lippe.html">felipe dias</a></li>
-                    <li><a href="audi.html">Yan Victor</a></li>
+                    <li><a href="felipe.html">felipe dias</a></li>
+                    <li><a href="yan.html">Yan Victor</a></li>
                 </ul>
             </nav>
         </div>
