--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ footer {
                     <p> sou o Felipe Dias. Amante de jogos de tiro, RPG, livros e música. Animado para compartilhar mais sobre mim neste trabalho!</p>
                 </div>
                 <div class="membro">
-                    <img src="pedrão.jpg" alt="Membro 2">
+                    <img src="pedrão1.jpg" alt="Membro 2">
                     <h3>pedro stipp</h3>
                     <p> oi sou o aprecio ler livros, jogar simuladores e possuo habilidades em programação HTML, CSS e edição de video também. </p>
                 </div>
@@ -244,7 +244,7 @@ footer {
                     <p>um membro fundamental do nosso grupo. Além de sua paixão por carros de corrida e esportivos, ele também é habilidoso em PHP. </p>
                 </div>
                 <div class="membro">
-                    <img src="davi.jpg" alt="Membro 5">
+                    <img src="davi.png" alt="Membro 5">
                     <h3>Davi foina</h3>
                     <p>um membro essencial do nosso grupo. Ele é apaixonado por design, jogos e música, trazendo uma perspectiva única para nossos projetos. </p>
                 </div>
