--- a/felipe.html
+++ b/felipe.html
@@ -218,7 +218,7 @@ footer {
         Discord
     </a>
     <a class="top-links--nav" href="https://t.me/+xDTtMTl84DYxYjFh">
-        <img src="telegra" class="top-link-img">
+        <img src="telegram2.png" class="top-link-img">
         Telegram
     </a>
 </div>
