--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ footer {
         <div class="interface">
             <div class="Logo">
                 <a href="#">
-                    <img src="alcina2.jpg" alt="logo da Escola Alcina">
+                    <img src="alcina3.png" alt="logo da Escola Alcina">
                 </a>
             </div>
             <nav class="menu-desktop">
