--- a/davi.html
+++ b/davi.html
@@ -210,7 +210,7 @@ footer {
                   
                 </div><!--txt--> 
                 <div class="img-top-site">
-                    <img src="davi.png" alt="">
+                    <img src="davi.jpg" alt="">
 
                 </div>
               </div>
